# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: ci.yml
migrations/: 20211207001458_create_subscriptions_table.sql  20211215013644_add_status_to_subscriptions.sql  20211215014538_make_status_not_null_in_subscriptions.sql  20211215014738_create_subscription_tokens_table.sql
scripts/: init.sh
settings/: base.yaml  dev.yaml  prod.yaml
src/: app.rs  email.rs  lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/domain/: email.rs  mod.rs  name.rs  subscriber.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: app.rs  health_check.rs  main.rs  subscriptions.rs
