[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-tls = "=3.0.0-rc.1"
actix-http = "=3.0.0-beta.14"
actix-web = "=4.0.0-beta.13"
chrono = "0.4.15"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.115", features = ["derive"]}
tracing = "0.1.9"
tracing-actix-web = "0.5.0-beta.4"
tracing-bunyan-formatter = "0.2.2"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
uuid = { version = "0.8.1", features = ["v4"] }
serde-aux = "3.0.1"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
claim = "0.5.0"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
once_cell = "1.8.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
fake = "~2.3"
serde_json = "1"
